--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -1,5 +1,5 @@
 #labels redis,c
-= C# Client for Redis =
+= .NET/C# Client for Redis =
 
 An API complete redis c# client based on [http://twitter.com/migueldeicaza Miguel de Icaza] previous efforts with [http://github.com/migueldeicaza/redis-sharp redis-sharp]. 
 
