Edited wiki page through web user interface.

--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -207,3 +207,34 @@ public interface IRedisClient
 }
 
 }}}
+
+And native support for any POCO types via:
+{{{
+public interface IBasicPersistenceProvider 
+  : IDisposable
+{
+	T GetById<T>(object id)
+		where T : class, new();
+
+	IList<T> GetByIds<T>(ICollection ids) 
+		where T : class, new();
+
+	T Store<T>(T entity)
+		where T : class, new();
+
+	void StoreAll<TEntity>(IEnumerable<TEntity> entities)
+		where TEntity : class, new();
+
+	void Delete<T>(T entity)
+		where T : class, new();
+
+	void DeleteById<T>(object id)
+		where T : class, new();
+
+	void DeleteByIds<T>(ICollection ids)
+		where T : class, new();
+
+	void DeleteAll<TEntity>()
+		where TEntity : class, new();
+}
+}}}
