--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -2,7 +2,7 @@ A convention-based, configuration-free lightweight ORM that uses the standard PO
 
 = Introduction =
 
-OrmLite is a set of light-weight extension methods around System.Data.* interfaces which is designed to persist POCO classes with a minimal amount of intrusion and configuration.
+OrmLite is a set of light-weight extension methods around System.Data.`*` interfaces which is designed to persist POCO classes with a minimal amount of intrusion and configuration.
 Another Orm with similar goals is [http://code.google.com/p/sqlite-net/ sqlite-net].
 
 OrmLite was designed with a focus on these core objectives:
