--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -42,7 +42,7 @@ using (var dbConn = db.CreateCommand())
 }
 }}}
 
-A more complete example can be seen using a couple of tables from the Northwind database.
+To get a better idea of the features of OrmLite lets walk through a complete example using sample tables from the Northwind database. With the classes below:
 {{{
 [Alias("Shippers")]
 public class Shipper
@@ -78,6 +78,22 @@ public class ShipperType
 	public string Name { get; set; }
 }
 
+public class SubsetOfShipper
+{
+	public int ShipperId { get; set; }
+	public string CompanyName { get; set; }
+}
+
+public class ShipperTypeCount
+{
+	public int ShipperTypeId { get; set; }
+	public int Total { get; set; }
+}
+}}}
+
+=== Creating tables ===
+Creating tables becomes as easy as:
+{{{
 using (var dbConn = ":memory:".OpenDbConnection())
 using (var dbCmd = dbConn.CreateCommand())
 {
@@ -103,9 +119,11 @@ DEBUG: CREATE TABLE "ShipperTypes"
 );
 DEBUG: CREATE UNIQUE INDEX uidx_shippertypes_name ON "ShipperTypes" ("Name" ASC);
 */
+}}}
 
-
-//Playing with transactions - with direct access to IDbCommand and friends.
+=== Transactions ===
+As we have direct access to IDbCommand and friends - playing with transactions is easy:
+{{{
 int trainsTypeId, planesTypeId;
 using (var dbTrans = dbCmd.BeginTransaction())
 {
@@ -125,8 +143,11 @@ using (var dbTrans = dbCmd.BeginTransaction(IsolationLevel.ReadCommitted))
 	dbTrans.Rollback();
 }
 Assert.That(dbCmd.Select<ShipperType>(), Has.Count(2));
+}}}
 
-
+=== CRUD Operations ===
+No ORM is complete without the standard crud operations:
+{{{
 //Performing standard Insert's and Selects
 dbCmd.Insert(new Shipper { CompanyName = "Trains R Us", Phone = "555-TRAINS", ShipperTypeId = trainsTypeId });
 dbCmd.Insert(new Shipper { CompanyName = "Planes R Us", Phone = "555-PLANES", ShipperTypeId = planesTypeId });
@@ -135,14 +156,16 @@ dbCmd.Insert(new Shipper { CompanyName = "We do everything!", Phone = "555-UNICO
 Assert.That(dbCmd.Select<Shipper>("CompanyName = {0} OR Phone = {1}", "Trains R Us", "555-UNICORNS"), Has.Count(2));
 Assert.That(dbCmd.Select<Shipper>("ShipperTypeId = {0}", trainsTypeId), Has.Count(1));
 Assert.That(dbCmd.Select<Shipper>("ShipperTypeId = {0}", planesTypeId), Has.Count(2));
+}}}
 
-
-//Performing custom queries
+=== Performing custom queries ===
+And with access to raw sql when you need it - the database is your oyster :)
+{{{
 //Select only a subset from the table
 var partialRows = dbCmd.Select<SubsetOfShipper>(typeof (Shipper), "ShipperTypeId = {0}", planesTypeId);
 Assert.That(partialRows, Has.Count(2));
 
-//Select into another POCO class that matches sql
+//Select into another POCO class that matches the sql results
 var rows = dbCmd.Select<ShipperTypeCount>(
 	"SELECT ShipperTypeId, COUNT(*) AS Total FROM Shippers GROUP BY ShipperTypeId ORDER BY COUNT(*)");
 
@@ -151,5 +174,4 @@ Assert.That(rows[0].ShipperTypeId, Is.EqualTo(trainsTypeId));
 Assert.That(rows[0].Total, Is.EqualTo(1));
 Assert.That(rows[1].ShipperTypeId, Is.EqualTo(planesTypeId));
 Assert.That(rows[1].Total, Is.EqualTo(2));
-
 }}}
