--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -42,9 +42,10 @@ using (var dbConn = db.CreateCommand())
 }
 }}}
 
-To get a better idea of the features of OrmLite lets walk through a complete example using sample tables from the Northwind database. _The full source code for this example is available [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ShippersExample.cs here]._
+To get a better idea of the features of OrmLite lets walk through a complete example using sample tables from the Northwind database. 
+_Full source code for this example is available [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ShippersExample.cs here]._
 
-With the classes below:
+With only the classes below:
 {{{
 [Alias("Shippers")]
 public class Shipper
@@ -123,7 +124,7 @@ DEBUG: CREATE UNIQUE INDEX uidx_shippertypes_name ON "ShipperTypes" ("Name" ASC)
 */
 }}}
 
-=== Transactions ===
+=== Transaction Support ===
 As we have direct access to IDbCommand and friends - playing with transactions is easy:
 {{{
 int trainsTypeId, planesTypeId;
@@ -155,10 +156,22 @@ dbCmd.Insert(new Shipper { CompanyName = "Trains R Us", Phone = "555-TRAINS", Sh
 dbCmd.Insert(new Shipper { CompanyName = "Planes R Us", Phone = "555-PLANES", ShipperTypeId = planesTypeId });
 dbCmd.Insert(new Shipper { CompanyName = "We do everything!", Phone = "555-UNICORNS", ShipperTypeId = planesTypeId });
 
+var trainsAreUs = dbCmd.First<Shipper>("ShipperTypeId = {0}", trainsTypeId);
+Assert.That(trainsAreUs.CompanyName, Is.EqualTo("Trains R Us"));
 Assert.That(dbCmd.Select<Shipper>("CompanyName = {0} OR Phone = {1}", "Trains R Us", "555-UNICORNS"), Has.Count(2));
-Assert.That(dbCmd.Select<Shipper>("ShipperTypeId = {0}", trainsTypeId), Has.Count(1));
 Assert.That(dbCmd.Select<Shipper>("ShipperTypeId = {0}", planesTypeId), Has.Count(2));
-}}}
+
+//Lets update a record
+trainsAreUs.Phone = "666-TRAINS";
+dbCmd.Update(trainsAreUs);
+Assert.That(dbCmd.GetById<Shipper>(trainsAreUs.Id).Phone, Is.EqualTo("666-TRAINS"));
+
+//Then make it disappear
+dbCmd.Delete(trainsAreUs);
+Assert.That(dbCmd.GetByIdOrDefault<Shipper>(trainsAreUs.Id), Is.Null);
+
+//And bring it back again
+dbCmd.Insert(trainsAreUs);
 
 === Performing custom queries ===
 And with access to raw sql when you need it - the database is your oyster :)
@@ -176,4 +189,12 @@ Assert.That(rows[0].ShipperTypeId, Is.EqualTo(trainsTypeId));
 Assert.That(rows[0].Total, Is.EqualTo(1));
 Assert.That(rows[1].ShipperTypeId, Is.EqualTo(planesTypeId));
 Assert.That(rows[1].Total, Is.EqualTo(2));
+
+
+//And finally no CRUD is complete without fast deletes:
+dbCmd.DeleteAll<Shipper>();
+dbCmd.DeleteAll<ShipperType>();
+
+Assert.That(dbCmd.Select<Shipper>(), Has.Count(0));
+Assert.That(dbCmd.Select<ShipperType>(), Has.Count(0));
 }}}
