--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -14,7 +14,7 @@ OrmLite was designed with a focus on these core objectives:
 
 = Limitations =
 
-For simplicity and to be able to have the same POCO model persisted in an RDBMS, db4o, memcached, redis or on the filesystem (all of which ServiceStack supports out of the box), *each model must have an 'Id' property which is its primary key*.  
+For simplicity, and to be able to have the same POCO class persisted in an RDBMS, db4o, memcached, redis or on the filesystem (all which ServiceStack supports out of the box), *each model must have an 'Id' property which is its primary key*.  
 
 
 = Examples =
