--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -1,4 +1,5 @@
-*ServiceStack.OrmLite* is a convention-based, configuration-free lightweight ORM that uses standard POCO classes and Data Annotation attributes to infer its table schema.
+=ServiceStack.OrmLite= 
+is a convention-based, configuration-free lightweight ORM that uses standard POCO classes and Data Annotation attributes to infer its table schema.
 
 = Introduction =
 
