--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -47,8 +47,7 @@ using (var dbConn = db.CreateCommand())
 }}}
 
 To get a better idea of the features of OrmLite lets walk through a complete example using sample tables from the Northwind database. 
-
-_Full source code for this example is available [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ShippersExample.cs here]._
+_(Full source code for this example is available [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.OrmLite/ServiceStack.OrmLite.Tests/ShippersExample.cs here].)_
 
 So with no other configuration using only the classes below:
 {{{
