--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -9,7 +9,7 @@ OrmLite was designed with a focus on these core objectives:
   * Simplicity - with minimal, convention-based attribute configuration
   * High performance - with support for indexes, text blobs, etc.
   * Expressive power and flexibility - with access to IDbCommand and raw SQL
-  * Cross platform - supports multiple dbs (currently: Sqlite and SqlServer) on both .NET and Mono platforms.
+  * Cross platform - supports multiple dbs (currently: Sqlite and SqlServer) running on both .NET and Mono platforms.
 
 = Download = 
 OrmLite is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack] or available to download separately as a [http://servicestack.googlecode.com/files/ServiceStack.OrmLite.dll single dll].
