--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -1,3 +1,4 @@
+#labels C,OpenSource,Mono,Lightweight,Fast,ORM
 ServiceStack.OrmLite is a convention-based, configuration-free lightweight ORM that uses standard POCO classes and Data Annotation attributes to infer its table schema.
 
 = Introduction =
