--- a/wiki/OrmLite.wiki
+++ b/wiki/OrmLite.wiki
@@ -13,7 +13,7 @@ OrmLite was designed with a focus on these core objectives:
   * Cross platform - supports multiple dbs (currently: Sqlite and SqlServer) running on both .NET and Mono platforms.
 
 = Download = 
-OrmLite is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack] or available to download separately as a [http://servicestack.googlecode.com/files/ServiceStack.OrmLite.dll single dll].
+OrmLite is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack] or available to download separately in a standalone  [http://servicestack.googlecode.com/files/ServiceStack.OrmLite.dll ServiceStack.OrmLite.dll].
 
 The full source code for OrmLite is also [http://code.google.com/p/servicestack/source/browse/#svn/trunk/Common/ServiceStack.OrmLite available online].
 
