--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -184,4 +184,4 @@ Took 132.0076ms to get the entire Northwind database (3202 records)
 */
 }}}
 
-Note: The total time taken includes an extra operation for each record to store the id of the type id in a Redis set for each set as well as serializing and de-serializing each record using Service Stack's TypeSerializer.
+Note: The total time taken includes an extra Redis operation for each record to store the id in a Redis set for each type as well as serializing and de-serializing each record using Service Stack's TypeSerializer.
